--- a/source/mathMinute/mathMinute.csproj
+++ b/source/mathMinute/mathMinute.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Gameplay.Designer.cs">
       <DependentUpon>Gameplay.cs</DependentUpon>
     </Compile>
+    <Compile Include="Languages.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
